/*
 * AlSafe API - US107 Consultar Detalhes do Aeroporto
 * Documentação para validar consulta de um aeroporto dado o IATA
 *
 * The version of the OpenAPI document: 1.0.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */


package org.openapitools.client.model;

import java.util.Objects;
import com.google.gson.TypeAdapter;
import com.google.gson.annotations.JsonAdapter;
import com.google.gson.annotations.SerializedName;
import com.google.gson.stream.JsonReader;
import com.google.gson.stream.JsonWriter;
import java.io.IOException;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;

import com.google.gson.Gson;
import com.google.gson.GsonBuilder;
import com.google.gson.JsonArray;
import com.google.gson.JsonDeserializationContext;
import com.google.gson.JsonDeserializer;
import com.google.gson.JsonElement;
import com.google.gson.JsonObject;
import com.google.gson.JsonParseException;
import com.google.gson.TypeAdapterFactory;
import com.google.gson.reflect.TypeToken;
import com.google.gson.TypeAdapter;
import com.google.gson.stream.JsonReader;
import com.google.gson.stream.JsonWriter;
import java.io.IOException;

import java.lang.reflect.Type;
import java.util.HashMap;
import java.util.HashSet;
import java.util.List;
import java.util.Map;
import java.util.Set;

import org.openapitools.client.JSON;

/**
 * Airport
 */
@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2026-05-24T18:23:54.491659+01:00[Europe/Lisbon]", comments = "Generator version: 7.7.0")
public class Airport {
  public static final String SERIALIZED_NAME_ID = "id";
  @SerializedName(SERIALIZED_NAME_ID)
  private Integer id;

  public static final String SERIALIZED_NAME_IATA_CODE = "iataCode";
  @SerializedName(SERIALIZED_NAME_IATA_CODE)
  private String iataCode;

  public static final String SERIALIZED_NAME_NAME = "name";
  @SerializedName(SERIALIZED_NAME_NAME)
  private String name;

  public static final String SERIALIZED_NAME_CITY = "city";
  @SerializedName(SERIALIZED_NAME_CITY)
  private String city;

  public static final String SERIALIZED_NAME_COUNTRY = "country";
  @SerializedName(SERIALIZED_NAME_COUNTRY)
  private String country;

  public static final String SERIALIZED_NAME_AIRPORT_TYPE = "airportType";
  @SerializedName(SERIALIZED_NAME_AIRPORT_TYPE)
  private String airportType;

  public static final String SERIALIZED_NAME_STATUS = "status";
  @SerializedName(SERIALIZED_NAME_STATUS)
  private String status;

  public static final String SERIALIZED_NAME_CERTIFIED_AIRPLANE_MODELS = "certifiedAirplaneModels";
  @SerializedName(SERIALIZED_NAME_CERTIFIED_AIRPLANE_MODELS)
  private List<String> certifiedAirplaneModels = new ArrayList<>();

  public Airport() {
  }

  public Airport id(Integer id) {
    this.id = id;
    return this;
  }

  /**
   * Identificador único gerado automaticamente pela base de dados.
   * @return id
   */
  @javax.annotation.Nullable
  public Integer getId() {
    return id;
  }

  public void setId(Integer id) {
    this.id = id;
  }


  public Airport iataCode(String iataCode) {
    this.iataCode = iataCode;
    return this;
  }

  /**
   * Get iataCode
   * @return iataCode
   */
  @javax.annotation.Nullable
  public String getIataCode() {
    return iataCode;
  }

  public void setIataCode(String iataCode) {
    this.iataCode = iataCode;
  }


  public Airport name(String name) {
    this.name = name;
    return this;
  }

  /**
   * Get name
   * @return name
   */
  @javax.annotation.Nullable
  public String getName() {
    return name;
  }

  public void setName(String name) {
    this.name = name;
  }


  public Airport city(String city) {
    this.city = city;
    return this;
  }

  /**
   * Get city
   * @return city
   */
  @javax.annotation.Nullable
  public String getCity() {
    return city;
  }

  public void setCity(String city) {
    this.city = city;
  }


  public Airport country(String country) {
    this.country = country;
    return this;
  }

  /**
   * Get country
   * @return country
   */
  @javax.annotation.Nullable
  public String getCountry() {
    return country;
  }

  public void setCountry(String country) {
    this.country = country;
  }


  public Airport airportType(String airportType) {
    this.airportType = airportType;
    return this;
  }

  /**
   * Get airportType
   * @return airportType
   */
  @javax.annotation.Nullable
  public String getAirportType() {
    return airportType;
  }

  public void setAirportType(String airportType) {
    this.airportType = airportType;
  }


  public Airport status(String status) {
    this.status = status;
    return this;
  }

  /**
   * Get status
   * @return status
   */
  @javax.annotation.Nullable
  public String getStatus() {
    return status;
  }

  public void setStatus(String status) {
    this.status = status;
  }


  public Airport certifiedAirplaneModels(List<String> certifiedAirplaneModels) {
    this.certifiedAirplaneModels = certifiedAirplaneModels;
    return this;
  }

  public Airport addCertifiedAirplaneModelsItem(String certifiedAirplaneModelsItem) {
    if (this.certifiedAirplaneModels == null) {
      this.certifiedAirplaneModels = new ArrayList<>();
    }
    this.certifiedAirplaneModels.add(certifiedAirplaneModelsItem);
    return this;
  }

  /**
   * Get certifiedAirplaneModels
   * @return certifiedAirplaneModels
   */
  @javax.annotation.Nullable
  public List<String> getCertifiedAirplaneModels() {
    return certifiedAirplaneModels;
  }

  public void setCertifiedAirplaneModels(List<String> certifiedAirplaneModels) {
    this.certifiedAirplaneModels = certifiedAirplaneModels;
  }



  @Override
  public boolean equals(Object o) {
    if (this == o) {
      return true;
    }
    if (o == null || getClass() != o.getClass()) {
      return false;
    }
    Airport airport = (Airport) o;
    return Objects.equals(this.id, airport.id) &&
        Objects.equals(this.iataCode, airport.iataCode) &&
        Objects.equals(this.name, airport.name) &&
        Objects.equals(this.city, airport.city) &&
        Objects.equals(this.country, airport.country) &&
        Objects.equals(this.airportType, airport.airportType) &&
        Objects.equals(this.status, airport.status) &&
        Objects.equals(this.certifiedAirplaneModels, airport.certifiedAirplaneModels);
  }

  @Override
  public int hashCode() {
    return Objects.hash(id, iataCode, name, city, country, airportType, status, certifiedAirplaneModels);
  }

  @Override
  public String toString() {
    StringBuilder sb = new StringBuilder();
    sb.append("class Airport {\n");
    sb.append("    id: ").append(toIndentedString(id)).append("\n");
    sb.append("    iataCode: ").append(toIndentedString(iataCode)).append("\n");
    sb.append("    name: ").append(toIndentedString(name)).append("\n");
    sb.append("    city: ").append(toIndentedString(city)).append("\n");
    sb.append("    country: ").append(toIndentedString(country)).append("\n");
    sb.append("    airportType: ").append(toIndentedString(airportType)).append("\n");
    sb.append("    status: ").append(toIndentedString(status)).append("\n");
    sb.append("    certifiedAirplaneModels: ").append(toIndentedString(certifiedAirplaneModels)).append("\n");
    sb.append("}");
    return sb.toString();
  }

  /**
   * Convert the given object to string with each line indented by 4 spaces
   * (except the first line).
   */
  private String toIndentedString(Object o) {
    if (o == null) {
      return "null";
    }
    return o.toString().replace("\n", "\n    ");
  }


  public static HashSet<String> openapiFields;
  public static HashSet<String> openapiRequiredFields;

  static {
    // a set of all properties/fields (JSON key names)
    openapiFields = new HashSet<String>();
    openapiFields.add("id");
    openapiFields.add("iataCode");
    openapiFields.add("name");
    openapiFields.add("city");
    openapiFields.add("country");
    openapiFields.add("airportType");
    openapiFields.add("status");
    openapiFields.add("certifiedAirplaneModels");

    // a set of required properties/fields (JSON key names)
    openapiRequiredFields = new HashSet<String>();
  }

  /**
   * Validates the JSON Element and throws an exception if issues found
   *
   * @param jsonElement JSON Element
   * @throws IOException if the JSON Element is invalid with respect to Airport
   */
  public static void validateJsonElement(JsonElement jsonElement) throws IOException {
      if (jsonElement == null) {
        if (!Airport.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
          throw new IllegalArgumentException(String.format("The required field(s) %s in Airport is not found in the empty JSON string", Airport.openapiRequiredFields.toString()));
        }
      }

      Set<Map.Entry<String, JsonElement>> entries = jsonElement.getAsJsonObject().entrySet();
      // check to see if the JSON string contains additional fields
      for (Map.Entry<String, JsonElement> entry : entries) {
        if (!Airport.openapiFields.contains(entry.getKey())) {
          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `Airport` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
        }
      }
        JsonObject jsonObj = jsonElement.getAsJsonObject();
      if ((jsonObj.get("iataCode") != null && !jsonObj.get("iataCode").isJsonNull()) && !jsonObj.get("iataCode").isJsonPrimitive()) {
        throw new IllegalArgumentException(String.format("Expected the field `iataCode` to be a primitive type in the JSON string but got `%s`", jsonObj.get("iataCode").toString()));
      }
      if ((jsonObj.get("name") != null && !jsonObj.get("name").isJsonNull()) && !jsonObj.get("name").isJsonPrimitive()) {
        throw new IllegalArgumentException(String.format("Expected the field `name` to be a primitive type in the JSON string but got `%s`", jsonObj.get("name").toString()));
      }
      if ((jsonObj.get("city") != null && !jsonObj.get("city").isJsonNull()) && !jsonObj.get("city").isJsonPrimitive()) {
        throw new IllegalArgumentException(String.format("Expected the field `city` to be a primitive type in the JSON string but got `%s`", jsonObj.get("city").toString()));
      }
      if ((jsonObj.get("country") != null && !jsonObj.get("country").isJsonNull()) && !jsonObj.get("country").isJsonPrimitive()) {
        throw new IllegalArgumentException(String.format("Expected the field `country` to be a primitive type in the JSON string but got `%s`", jsonObj.get("country").toString()));
      }
      if ((jsonObj.get("airportType") != null && !jsonObj.get("airportType").isJsonNull()) && !jsonObj.get("airportType").isJsonPrimitive()) {
        throw new IllegalArgumentException(String.format("Expected the field `airportType` to be a primitive type in the JSON string but got `%s`", jsonObj.get("airportType").toString()));
      }
      if ((jsonObj.get("status") != null && !jsonObj.get("status").isJsonNull()) && !jsonObj.get("status").isJsonPrimitive()) {
        throw new IllegalArgumentException(String.format("Expected the field `status` to be a primitive type in the JSON string but got `%s`", jsonObj.get("status").toString()));
      }
      // ensure the optional json data is an array if present
      if (jsonObj.get("certifiedAirplaneModels") != null && !jsonObj.get("certifiedAirplaneModels").isJsonNull() && !jsonObj.get("certifiedAirplaneModels").isJsonArray()) {
        throw new IllegalArgumentException(String.format("Expected the field `certifiedAirplaneModels` to be an array in the JSON string but got `%s`", jsonObj.get("certifiedAirplaneModels").toString()));
      }
  }

  public static class CustomTypeAdapterFactory implements TypeAdapterFactory {
    @SuppressWarnings("unchecked")
    @Override
    public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
       if (!Airport.class.isAssignableFrom(type.getRawType())) {
         return null; // this class only serializes 'Airport' and its subtypes
       }
       final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
       final TypeAdapter<Airport> thisAdapter
                        = gson.getDelegateAdapter(this, TypeToken.get(Airport.class));

       return (TypeAdapter<T>) new TypeAdapter<Airport>() {
           @Override
           public void write(JsonWriter out, Airport value) throws IOException {
             JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
             elementAdapter.write(out, obj);
           }

           @Override
           public Airport read(JsonReader in) throws IOException {
             JsonElement jsonElement = elementAdapter.read(in);
             validateJsonElement(jsonElement);
             return thisAdapter.fromJsonTree(jsonElement);
           }

       }.nullSafe();
    }
  }

  /**
   * Create an instance of Airport given an JSON string
   *
   * @param jsonString JSON string
   * @return An instance of Airport
   * @throws IOException if the JSON string is invalid with respect to Airport
   */
  public static Airport fromJson(String jsonString) throws IOException {
    return JSON.getGson().fromJson(jsonString, Airport.class);
  }

  /**
   * Convert an instance of Airport to an JSON string
   *
   * @return JSON string
   */
  public String toJson() {
    return JSON.getGson().toJson(this);
  }
}

