package org.example.airports.domain;

public enum AirportStatus {
    Operational,
    Closed,
    Under_maintenance
}
