package org.example.airports.repositories;

public class AirportRepository {
}
